--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JAVAFX23"/>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.USER_LIBRARY/JavaFX"/>
+	<classpathentry kind="lib" path="C:/Users/sergi/AppData/Local/Microsoft/Windows/INetCache/IE/CTYY431G/mysql-connector-j-8.3.0[1].jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
